Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <label>Integration Log</label>
        <type>AutoNumber</type>
        <displayFormat>IL-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>