Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Integration_Log__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch Sync</fullName>
                <default>true</default>
                <label>Batch Sync</label>
            </value>
            <value>
                <fullName>Manual Sync</fullName>
            </value>
            <value>
                <fullName>API Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>