Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Integration_Log__c/fields/Request_Cursor__c.field-meta.xml
<CustomField>
    <fullName>Request_Cursor__c</fullName>
    <label>Request Cursor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>