Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Integration_Log__c/fields/Request_Page__c.field-meta.xml
<CustomField>
    <fullName>Request_Page__c</fullName>
    <label>Request Page</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>