Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Integration_Log__c/fields/Trailblazer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile__c</fullName>
    <label>Trailblazer Profile</label>
    <type>Lookup</type>
    <referenceTo>Trailblazer_Profile__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>